Fix Grid on Mobile
On the iPhone the grid would display side by side and go off the screen. This gives us a single column so we can select our items on a smart phone more easily.

--- a/app/javascript/styles/components/Calendar.scss
+++ b/app/javascript/styles/components/Calendar.scss
@@ -13,12 +13,9 @@
   }
 
   @include media(small) {
-    column-gap: 60px;
+    grid-template-columns: 100%
   }
 
-  @include media(x-small) {
-    column-gap: 30px;
-  }
   align-self: center;
   display: grid;
   grid-column-gap: 60px;
@@ -180,7 +177,7 @@
   &__container {
     cursor: pointer;
   }
-  
+
   &__label {
     display: block;
     fill: black;
